<resources>
    <string name="app_name">GKA Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registration">Registration</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="share">Share</string>
    <string name="explore">Explore</string>
    <string name="show_password">Show Password</string>
    <string name="this_is_title">This is title</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_fullname_hint">Enter your fullname</string>
    <string name="login_email_hint">Enter your emai addressl</string>
    <string name="login_mobile_phone_hint">+62</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="empty_screen">We do not have anything\nhere right now. Please Retry</string>
    <string name="btn_retry">Retry</string>


    <string-array name="sports_images">
        <item>https://androidwave.com/media/images/img_baseball.jpg</item>
        <item>https://androidwave.com/media/images/img_badminton.jpg</item>
        <item>https://androidwave.com/media/images/img_basketball.jpg</item>
        <item>https://androidwave.com/media/images/img_bowling.jpg</item>
        <item>https://androidwave.com/media/images/img_cycling.jpg</item>
        <item>https://androidwave.com/media/images/img_golf.jpg</item>
        <item>https://androidwave.com/media/images/img_running.jpg</item>
        <item>https://androidwave.com/media/images/img_soccer.jpg</item>
        <item>https://androidwave.com/media/images/img_swimming.jpg</item>
        <item>https://androidwave.com/media/images/img_tabletennis.jpg</item>
        <item>https://androidwave.com/media/images/img_tennis.jpg</item>
    </string-array>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Nike Enters 10-Year Partnership With Major League Baseball! </item>
        <item>Indonesia Masters – Saina Nehwal sails into semifinals PV Sindhu, Kidambi Srikanth lose in quarters!</item>
        <item>College Basketball 2018–19 Player of the Year Power Rankings Everyone is chasing Dukes Zion Williamson!</item>
        <item>Local bowler lands 132 perfect games, shares his secret for success!</item>
        <item>Sierra solos to win at womens Cadel Evans Great Ocean Road Race!</item>
        <item>Tiger Woods Friday live blog: Woods overcomes mid-round hiccup to make the cut at Torrey Pines!</item>
        <item>The 5km fun run was organised by Ironman England as part of its annual three-day triathlon festival in Bolton, Manchester in a bid to attract more female runners to the event!</item>
        <item>Soccer insider notes: Liverpool not the only Premier League club eyeing Weston McKennie!</item>
        <item>Chloe Grimme, a USA Swimming Scholastic All American from Land O Lakes, Florida, announced on social media that she has verbally committed to the University of Florida for 2020–21!</item>
        <item>Table Tennis Federation Revokes Soumyajit Ghoshs Suspension, 9 Months After Rape Allegations!</item>
        <item>2019 Australian Open odds, predictions for mens finals!</item>
    </string-array>
</resources>
