<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:id="@+id/llFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFullName"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />

                <EditText
                    android:id="@+id/etFullName"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_username_hint"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPassword"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />


               <EditText
                    android:id="@+id/etPassword1"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPassword2"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/re_password"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />


                <EditText
                    android:id="@+id/etPassword2"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:textSize="10sp"
                    android:theme="@android:style/Theme.Holo" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_username_hint"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPhonenumber"
                    style="@style/Widget.AppCompat.TextView.Custome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="5dp" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/Widget.EditText.Custome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_mobile_phone_hint"
                    android:inputType="phone"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="24dp" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Submit" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>